add style + update system

--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -3,13 +3,18 @@
 <head>
 <meta charset="UTF-8">
 <title>Demo</title>
+<link rel="stylesheet" 	href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.2/css/bootstrap.min.css" />
 </head>
 <body>
-	<h2>Form</h2>
-	<h1>Form</h1>
-    <form action="#" th:action="@{/create}" th:object="${todo}" method="post">
-        <p>Message: <input type="text" th:field="*{text}" /></p>
-        <p><input type="submit" value="Submit" />
-    </form>
+	<div class="container">
+		<h2>Form</h2>
+	    <form action="#" th:action="@{/create}" th:object="${todo}" method="post">
+	        <input type="hidden" th:field="*{id}" />
+	        <p>Message: <input type="text" th:field="*{text}" /></p>
+	        <p><input type="submit" value="Submit" class="btn btn-primary" />
+	    </form>
+	</div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.2/js/bootstrap.min.js"></script>
 </body>
 </html>
