simple custom security check + angularjs in front

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,49 +1,30 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="todoApp">
 <head>
 <meta charset="UTF-8">
 <title>Demo</title>
 <link rel="stylesheet" 	href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.2/css/bootstrap.min.css" />
-<link rel="stylesheet" 	href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css" />
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.2/angular.min.js"></script>
+<script src="js/todo.js"></script>
 </head>
 <body>
-	<div class="container">
-	<h2>List of Todo</h2>
-	<a th:href="@{'/create'}" class="btn btn-primary">Create</a>
-	<table id="my-table" class="table table-bordered">
-		<thead>
-			<tr>
-				<th>#</th>
-				<th>text</th>
-				<th>actions</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr th:each="entity : ${entities}">
-				<td>		
-					<span th:text="${entity.id}"></span>
-		        </td>
-				<td>		
-					<span th:text="${entity.text}"></span>
-		        </td>
-				<td>
-					<div style="display:inline-block">
-						<a th:href="@{'/create/' + ${entity.id}}" class="btn btn-success">Update</a>	
-					</div>	
-					<div style="display:inline-block">
-						<form th:action="@{/delete}" method="post">
-							<input type="hidden" name="id" th:value="${entity.id}" />
-				            <button type="submit" class="btn btn-primary">Delete</button>
-				        </form>
-					</div>	
-		        </td>
-			</tr>
-		</tbody>
-	</table>
-	</div>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.2/js/bootstrap.min.js"></script>
-<script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
-<script src="js/main.js"></script>
+  <h2>Todo :</h2>
+	<div ng-controller="TodoListController as todoList">
+     <span>{{ todoList.remaining() }} of {{ todoList.todos.length }} remaining</span>
+     [ <a href="" ng-click="todoList.archive()">archive</a> ]
+     <ul class="unstyled">
+        <li ng-repeat="todo in todoList.todos">
+          <label class="todo in todoList.todos">
+            <input type="checkbox" ng-model="todo.done" />
+            <span class="done-{{ todo.done }}">{{ todo.text }}</span>
+          </label>
+        </li>
+     </ul>
+     <form ng-submit="todoList.addTodo()">
+        <input type="text" ng-model="todoList.todoText" size="30" placeholder="add new todo here" />
+        <input class="btn btn-primary" type="submit" value="add" />
+      </form>
+  </div>
+<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.2/js/bootstrap.min.js"></script>-->
 </body>
 </html>
