--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,30 +1,15 @@
 <!DOCTYPE html>
-<html ng-app="todoApp">
+<html ng-app="application">
 <head>
 <meta charset="UTF-8">
 <title>Demo</title>
-<link rel="stylesheet" 	href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.2/css/bootstrap.min.css" />
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.2/angular.min.js"></script>
-<script src="js/todo.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.2/angular-route.js"></script>
 </head>
 <body>
-  <h2>Todo :</h2>
-	<div ng-controller="TodoListController as todoList">
-     <span>{{ todoList.remaining() }} of {{ todoList.todos.length }} remaining</span>
-     [ <a href="" ng-click="todoList.archive()">archive</a> ]
-     <ul class="unstyled">
-        <li ng-repeat="todo in todoList.todos">
-          <label class="todo in todoList.todos">
-            <input type="checkbox" ng-model="todo.done" />
-            <span class="done-{{ todo.done }}">{{ todo.text }}</span>
-          </label>
-        </li>
-     </ul>
-     <form ng-submit="todoList.addTodo()">
-        <input type="text" ng-model="todoList.todoText" size="30" placeholder="add new todo here" />
-        <input class="btn btn-primary" type="submit" value="add" />
-      </form>
-  </div>
-<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.2/js/bootstrap.min.js"></script>-->
+	<div ng-view></div>	
+<script src="js/application.js"></script>
+<script src="js/services/todo-service.js"></script>
+<script src="js/components/todo-controller.js"></script>
 </body>
 </html>
