--- a/src/main/resources/static/js/components/list/todo-list-partial.html
+++ b/src/main/resources/static/js/components/list/todo-list-partial.html
@@ -10,7 +10,7 @@
 		<li ng-repeat="todo in todoList.todos track by todo.id">
 			<label> 
 				<input type="checkbox"	ng-model="todo.done" ng-change="todoList.update(todo)"/> 
-				<span class="done-{{ todo.done }}">{{ todo.text }}</span>
+				<a ng-href="#/detail/{{ todo.id }}">{{ todo.text }}</a>
 				<a href="" ng-click="todoList.delete(todo)">Delete</a>
 			</label>
 		</li>
