--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,5 +13,6 @@
 <script src="js/services/todo-service.js"></script>
 <script src="js/components/list/todo-list-controller.js"></script>
 <script src="js/components/detail/todo-detail-controller.js"></script>
+<script src="js/directives/todo-directive.js"></script>
 </body>
 </html>
