add filter to todo list

--- a/src/main/resources/static/js/components/list/todo-list-partial.html
+++ b/src/main/resources/static/js/components/list/todo-list-partial.html
@@ -9,8 +9,9 @@
 			<input class="btn btn-primary" type="submit" value="add" />
 		</form>
 		<br/>
+		<input type="text" class="form-control" placeholder="Filter todo..." ng-model="q"/>
 		<ul class="list-group">
-			<li ng-repeat="todo in todoList.todos track by todo.id" class="list-group-item">
+			<li ng-repeat="todo in todoList.todos | filter:q" class="list-group-item">
 				<div class="row">
 					<div class="col-1">
 						<input type="checkbox"	ng-model="todo.done" ng-change="todoList.update(todo)"/>
