--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,5 +14,6 @@
 <script src="js/components/list/todo-list-controller.js"></script>
 <script src="js/components/detail/todo-detail-controller.js"></script>
 <script src="js/directives/todo-directive.js"></script>
+<script src="js/filters/todo-filter.js"></script>
 </body>
 </html>
