--- a/src/main/resources/static/js/components/list/todo-list-partial.html
+++ b/src/main/resources/static/js/components/list/todo-list-partial.html
@@ -33,5 +33,8 @@
 				<small>Create: {{ todo.creationDate | date:'dd-MM-yyyy' }} | Update: {{ todo.updateDate | date:'dd-MM-yyyy' }}</small>
 			</li>
 		</ul>
+		<div ng-if="!todoList.todos.length" class="alert alert-primary">
+			Nothing to show yet.
+		</div>
 	</div>
 </div>
