--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="application">
+<html ng-app="application" ng-strict-di>
 <head>
 <meta charset="UTF-8">
 <title>Demo</title>
