--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,5 +15,6 @@
 <script src="js/components/detail/todo-detail-controller.js"></script>
 <script src="js/directives/todo-directive.js"></script>
 <script src="js/filters/todo-filter.js"></script>
+<script src="js/constants/todo-constant.js"></script>
 </body>
 </html>
