--- a/src/main/resources/static/js/components/detail/todo-detail-partial.html
+++ b/src/main/resources/static/js/components/detail/todo-detail-partial.html
@@ -43,7 +43,7 @@
 						{{ todoDetail.entity.text }}
 					</div>
 					<div ng-if="editMode">
-						<input type="text" ng-model="todoDetail.entity.text" />
+						<input type="text" ng-model="todoDetail.entity.text" required />
 					</div>
 				</td>
 				<td>
